--- a/gb/13/4/16/n3847548.md
+++ b/gb/13/4/16/n3847548.md
@@ -1,13 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bghzqz371/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/bghzqz371/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/bghzqz371/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bghzqz371/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/bghzqz371/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bghzqz371/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/bghzqz371/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bghzqz371/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/bghzqz371/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bghzqz371/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/bghzqz371/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bghzqz371/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/bghzqz371/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bghzqz371/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/bghzqz371/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bghzqz371/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/bghzqz371/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/bghzqz371/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/bghzqz371/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/bghzqz371/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bghzqz371/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bghzqz371/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bghzqz371/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bghzqz371/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>手足之争：好孩子与坏孩子</h2>
-
-<h6></h6>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2013/04/1304152051501853-414x599.jpg" />
+<h6>（图片来源：photos.com）
+</h6>
 <hr>
-<p>【大纪元2013年04月16日讯】（大纪元记者冯霁月编译报导）我们经常听家长提起兄弟姐妹之间的竞争冲突。大家要注意的是，兄弟姐妹的竞争是儿童成长中的正常情绪状态。<ahref="https://github.com/bghzqz371/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>们相互竞争以赢得父母的赞同和喜爱。事实上，成年子女仍然可能为得到父母的注意而竞争。作为父母，我们的工作之一就是教兄弟姐妹如何与对方相处。毕竟我们希望他们在成年后能继续保持良好关系。</p>
+<p>【大纪元2013年04月16日讯】（大纪元记者冯霁月编译报导）我们经常听家长提起兄弟姐妹之间的竞争冲突。大家要注意的是，兄弟姐妹的竞争是儿童成长中的正常情绪状态。<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>们相互竞争以赢得父母的赞同和喜爱。事实上，成年子女仍然可能为得到父母的注意而竞争。作为父母，我们的工作之一就是教兄弟姐妹如何与对方相处。毕竟我们希望他们在成年后能继续保持良好关系。</p>
 <p>下面是一些减少家中手足之争的具体方法：</p>
-<p><B>一、不要偏向任何一个<ahref="https://github.com/bghzqz371/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a></B></p>
+<p><B>一、不要偏向任何一个<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a></B></p>
 <p>孩子们发生冲突时，家长应指导孩子们如何与对方共同解决问题，而不是决定谁对谁错。偏袒一方只会增加敌对情绪。</p>
 <p>如果一个孩子向你投诉另一个，您应指导他们如何去解决问题。例如，一个孩子抱怨说他的姊妹不愿让出电脑，建议他回去向姊妹发出请求，而不是命令：“我有一个特殊的作业到期要交了，可能需要两个小时完成。我们商量一下什么时候让我用电脑，好吗？”</p>
 <p>不要决定谁对还是错。请记住，即使受到邀请，我们也不需要参与孩子间的任何争论。这些争论包括兄弟姐妹之争。相反，帮助孩子培养妥协、公平和轮替的技巧，发展资源共享的家庭系统。例如厨房定时器或奇数、偶数日子可以帮助轮替。教孩子学会在等待期间平静和舒缓自己的技能，比如深呼吸、读书、或做一些运动。</p>
@@ -26,47 +27,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/12/12/25/n3760884.md#1">调皮孩子如何成为顶尖设计师和千万富翁？</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/12/12/25/n3761134.md#1">5个方法 教孩子如何面对悲剧</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/13/1/4/n3768356.md#1">音乐不是孩子的唯一选择（下）</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/13/1/13/n3775413.md#1">孩子良好成长 家庭很重要</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/13/1/16/n3777705.md#1">【颜丹】孩子的教育问题不可轻率</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/13/2/14/n3800510.md#1">教育专家：神韵是孩子最好的文化美学教育</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/13/3/25/n3831234.md#1">纽时：该不该夸孩子？把握好分寸很重要</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/13/4/6/n3840144.md#1">及早准备教育金  孩子学习无虞</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/13/4/10/n3842787.md#1">孩子自理能力差  父母保护过度、宠溺是祸因</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/10/13/n13301818.md#1">学龄前亲子共读焦点 临床心理师：学习生活策略</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/12/12/25/n3760884.md#1">调皮孩子如何成为顶尖设计师和千万富翁？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/12/12/25/n3761134.md#1">5个方法 教孩子如何面对悲剧</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/1/4/n3768356.md#1">音乐不是孩子的唯一选择（下）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/1/13/n3775413.md#1">孩子良好成长 家庭很重要</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/1/16/n3777705.md#1">【颜丹】孩子的教育问题不可轻率</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/2/14/n3800510.md#1">教育专家：神韵是孩子最好的文化美学教育</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/3/25/n3831234.md#1">纽时：该不该夸孩子？把握好分寸很重要</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/4/6/n3840144.md#1">及早准备教育金  孩子学习无虞</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/4/10/n3842787.md#1">孩子自理能力差  父母保护过度、宠溺是祸因</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11949461.md#1">孩子迷上YouTube 父母当如何应对</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/10/n11512510.md#1" target="_blank">杨宁：从瑞典最豪华战舰沉没说中共的结局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240051.md#1" target="_blank">纽约州奥伯尼市长宣布5月13日法轮大法日</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/11/n10208093.md#1" target="_blank">古玉文：消灭私有制不是出路（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/28/n11352966.md#1" target="_blank">袁红冰：法轮功对中国政治的影响</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/10/7/n13289075.md#1">【百年真相】 骇世惊俗的告白 瞿秋白《多余的话》</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/10/4/n13281397.md#1">中国佛教史上最大法难——中共毁灭佛教</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/10/8/n13291558.md#1">【未解之谜】传奇女祭司 三千年后重回神庙</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/10/5/n13283972.md#1">【未解之谜】“江南布衣” 图案背后的秘密</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/9/5/n13211569.md#1">【人生之钥】天衣无缝的罪行 莫名其妙被抖出来</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/10/13/n13302741.md#1">【时事纵横】砸15亿建生态基金 习增外交筹码？</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/10/5/n13283523.md#1">【直播】美智库：中共军机扰台 美台如何应对</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/10/13/n13302784.md#1">【秦鹏直播】莆田命案引爆网络 官方急维稳</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/10/12/n13299040.md#1">女星郑爽怒骂中共腐败 称不再沉默</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/10/12/n13298090.md#1">【内幕】福建做备战调查 学者：习或提前攻台</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/10/11/n13297597.md#1">汤唯42歳生日 晒年迈父亲与5岁女儿合照</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/10/11/n13297597.md#1">汤唯42歳生日 晒年迈父亲与5岁女儿合照</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/10/12/n13299943.md#1">陆第一网红papi酱工作室注销 称决议解散</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/10/12/n13298305.md#1">比莉隔15年复出作《妈，别闹了！》 将登Netflix</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/10/12/n13298927.md#1">黄子佼规划60岁退休 已锁定数位接班人</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/10/12/n13300452.md#1">音乐节演出被取消 歌手宋冬野喊话求放条生路</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/9/8/n13218308.md#1">耳穴竟如此神奇！这样按耳朵提升免疫力、减肥</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/10/13/n13300831.md#1">脖子上套着轮胎2年 这只驼鹿终于解脱了</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/10/12/n13299239.md#1">【健康1+1】疫情下降 背后真正原因不是疫苗？</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/10/2/n13276599.md#1">远离胃酸逆流！营养师：这些膳食纤维是食疗首选</a></li>
-<li><a href="https://github.com/bghzqz371/djy/blob/master/gb/21/10/13/n13301342.md#1">曾因自拍爆红 大猩猩临终前拥抱一生的恩人</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/21/n11960123.md#1">【拍案惊奇】川普指中共延误 武汉二次爆发预警</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/21/n11961231.md#1">【直播回放】3.21疫情追踪：五国确诊破2万</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/13/n11938712.md#1">【罗厨寻味】荷香蟹肉糯米饭</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/7/5/n10538877.md#1">睡前一碗安眠汤睡得沉 五款茶饮安抚情绪</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/1/20/n10073708.md#1">芋头是“天然养颜食物” 还能抗癌解毒</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950927.md#1">中共肺炎病人气管插管 到底有多大作用？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/20/n11959207.md#1">【胡乃文开讲】喝1碗汤退烧杀病毒 医：发烧代表你身体好</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955267.md#1">脊椎最怕你做5件事！中医师这样做保养脊椎</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/bghzqz371/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/bghzqz371/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/4/16/n3847548.htm">手足之争：好孩子与坏孩子</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/4/16/n3847548.htm">手足之争：好孩子与坏孩子</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/bghzqz371/djy/blob/master/gb/13/4/16/n3847548.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bghzqz371/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bghzqz371/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bghzqz371/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bghzqz371/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bghzqz371/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/13/4/16/n3847548.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
